# flippy

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: __main__.py  autolyrics.py  life.py  lyrics.py  sample_demo.py  text.py  train.py
flippy/: comms.py  font_data.py  sign.py  text_rendering.py
tests/: test_gui.py
utils/: fetch_lyrics.py  lyrics_gui.py
